# ciso-digital

./: .gitignore  00-PROJECT-CHARTER.md  01-TECHNICAL-ARCHITECTURE.md  02-database-design.md  03-API-SPECIFICATION.md  03-agentes-ia.md  04-sistema-proactivo.md  05-N8N-WORKFLOWS.md  06-KNOWLEDGE-BASE-STRUCTURE.md  08-IMPLEMENTATION-ROADMAP.md  09-DEVELOPMENT-STANDARDS.md  AGENTS.md  README.md
backend/: .gitignore  .pre-commit-config.yaml  PERFORMANCE_TESTING_REPORT.md  VERIFICATION_REPORT.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: 4858716f5228_initial_migration_create_risks_table.py  8320d3e24dd7_add_conversation_models.py  908bd075fcff_add_incident_response_model.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base_agent.py  incident_agent.py  orchestrator.py  risk_agent.py
backend/app/agents/prompts/: orchestrator_aggregation.txt  risk_assessment_system.txt  risk_assessment_user.txt
backend/app/agents/tools/: __init__.py
backend/app/api/: __init__.py
backend/app/api/middleware/: __init__.py  metrics.py
backend/app/api/routes/: __init__.py  chat.py  health.py  incidents.py  risk.py
backend/app/api/schemas/: __init__.py  chat.py
backend/app/core/: __init__.py  config.py  database.py  logging.py
backend/app/features/: __init__.py
backend/app/features/incident_response/: __init__.py
backend/app/features/incident_response/models/: __init__.py  incident.py
backend/app/features/incident_response/schemas/: __init__.py  incident.py
backend/app/features/incident_response/services/: __init__.py  exceptions.py  incident_service.py  query_builder.py
backend/app/features/risk_assessment/: __init__.py
backend/app/features/risk_assessment/schemas/: __init__.py  risk.py
backend/app/features/risk_assessment/services/: __init__.py  risk_service.py
backend/app/schemas/: __init__.py  orchestrator.py
backend/app/services/: __init__.py  cache_service.py  conversation_memory.py  copilot_service.py  embedding_service.py  intent_classifier.py  notification_service.py  rag_service.py  risk_calculator.py  vector_store.py
backend/app/shared/: __init__.py
backend/app/shared/exceptions/: __init__.py
backend/app/shared/models/: __init__.py  base.py  conversation.py  enums.py  risk.py
backend/app/shared/schemas/: __init__.py
backend/app/shared/utils/: __init__.py
backend/scripts/: DEMO_OUTPUT.txt  DEMO_REPORT.md  README.md  SEED_DATA_REPORT.md  __init__.py  demo_ciso_orchestrator.backup.py  demo_ciso_orchestrator.py  seed_db.py  seed_incidents.py  seed_knowledge_base.py  test_api.sh  test_migrations.py  verify.sh  verify_system.py
backend/tests/: __init__.py  conftest.py
backend/tests/e2e/: __init__.py
backend/tests/integration/: __init__.py  test_cache_integration.py  test_incident_response_flow.py  test_risk_assessment_flow.py  test_vector_store_integration.py
backend/tests/integration/test_api/: __init__.py  test_risks_api.py
backend/tests/performance/: __init__.py  conftest.py  test_agent_performance.py
backend/tests/unit/: __init__.py  test_config.py  test_database.py
backend/tests/unit/test_agents/: test_base_agent.py  test_incident_agent.py  test_orchestrator.py  test_risk_agent.py  test_risk_agent_logging.py
backend/tests/unit/test_api/: test_health.py  test_incident_routes.py  test_risk.py
backend/tests/unit/test_api/test_chat/: test_chat_endpoints.py
backend/tests/unit/test_api/test_middleware/: test_metrics.py
backend/tests/unit/test_core/: test_logging.py
backend/tests/unit/test_models/: test_risk.py
backend/tests/unit/test_schemas/: test_risk_schemas.py
backend/tests/unit/test_scripts/: test_seed_knowledge_base.py
backend/tests/unit/test_services/: __init__.py  test_cache_service.py  test_conversation_memory.py  test_copilot_service.py  test_embedding_service.py  test_incident_service.py  test_intent_classifier.py  test_rag_service.py  test_risk_calculator.py  test_risk_service_new.py  test_vector_store.py
docs/: API.md  CONVERSATION-MEMORY.md  COPILOT_SDK_ANALYSIS.md  INCIDENT-RESPONSE.md  ORCHESTRATOR.md  PROMPT-ENGINEERING.md  README.md  STEP-14-DOCUMENTATION-REPORT.md
knowledge-base/: dora-regulation.md  incident-response-basics.md  iso27001-overview.md  risk-management-guide.md
knowledge-base/playbooks/: README.md  data-breach-playbook.md  (+2 more)
